Added author email

--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-Author: Oscar Ramirez Jimenez
+Author: Oscar Ramirez Jimenez <tuxskar>
+Email: tuxskar@gmail.com
 
-This project has been made to allow mainly to new lawers that wants to start her law office, 
-that don't have enough money to spend on a professional program to organize his office and 
-they want to have a open source alternative
+This project has been made to allow mainly to new lawers that wants to start her law office, that don't have enough money to spend on a professional program to organize his office and they want to have a open source alternative
