Added spanish project description

--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 Author: Oscar Ramirez Jimenez <tuxskar>
-Email: tuxskar@gmail.com
+Email: tuxskar<at>gmail.com
+
+Programa de escritorio destinado a la organización de despachos de abogados y asesorías juridicas
+Está orientado a que cualquier abogado o despacho de abogados que quiera montar su propio despacho tenga una aplicación para la gestión de su despacho basado en software libre y no viendose obligado a usar soluciones profesionales que aunque puedan ser más completas impliquen un gasto inicial muy elevado.
 
 This project has been made to allow mainly to new lawers that wants to start her law office, that don't have enough money to spend on a professional program to organize his office and they want to have a open source alternative
