Added some things to TODO file

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 Issues
 If you have a client view opened and you delete this client the view should close too
 
-TODO:
+TODO
+optimitation using the old position of the client that you have update
 
